[package]
authors = ["zaaack <zaaack@qq.com>"]
name = "rust-reason-graphql-todo"
version = "0.1.0"

[dependencies]
debug-rs = "0.1.3"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
juniper = { version = "0.8.1" }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper_rocket" }
diesel = { version = "0.15.0", features = ["sqlite"] }
diesel_codegen = { version = "0.15.0", features = ["sqlite"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "tera_templates"]
version = "0.3.0"
